tests/paczka1/fuzzy1/48612201.err
Error in line 1: q8DCA0 A482 94,1
Error in line 12: q8DCA0 S583 67,4
Error in line 25: S639 A482 x0,5
Error in line 31: xJ1sU S583 28,7
Error in line 32: mqC A183 82,8
Error in line 17: q8DCA0 A183 97,8
